--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE >
+<!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
@@ -24,6 +24,8 @@
     />
   </head>
   <body>
-    <div class="page">probando ando ...</div>
+    <header></header>
+    <main></main>
+    <footer></footer>
   </body>
 </html>
