--- a/index.html
+++ b/index.html
@@ -24,9 +24,16 @@
     />
   </head>
   <body>
-    <div class="page" />
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <div class="page">
+    <header class="header"></header>
+    <main class="content">
+      <section class="recipes">
+
+      </section>
+      <section class="reservation">
+
+      </section>
+    </main>
+    <footer class="footer"></footer>
   </body>
 </html>
