--- a/index.html
+++ b/index.html
@@ -25,15 +25,12 @@
   </head>
   <body>
     <div class="page">
-    <header class="header"></header>
-    <main class="content">
-      <section class="recipes">
-
-      </section>
-      <section class="reservation">
-
-      </section>
-    </main>
-    <footer class="footer"></footer>
+      <header class="header"></header>
+      <main class="content">
+        <section class="recipes"></section>
+        <section class="reservation"></section>
+      </main>
+      <footer class="footer"></footer>
+    </div>
   </body>
 </html>
