--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>cafeteria</title>
     <link rel="shortcut icon" href="./favicon.ico" />
     <link rel="stylesheet" href="./pages/index.css" />
+    <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -80,7 +81,7 @@
             Echa un vistazo a las recetas que hemos reunido para que elabores
             tus propios snacks.
           </p>
-          <div clas="recipes__videos">
+          <div class="recipes__videos">
             <div class="recipes__video-item">
               <div>
                 <iframe
