corecciones de sintaxis

--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
                 id="name"
                 name="name"
                 aria-placeholder="Nombre"
-                required
-              />
+                required>
               <label class="form__label" for="diners-numbers"
                 >Número de comensales</label
               >
@@ -137,16 +136,14 @@
                 min="1"
                 max="8"
                 placeholder="1-8"
-                required
-              />
+                required>
               <label class="form__lable" for="date">Fecha y Hora</label>
               <input
                 class="form__input"
                 type="datetime-local"
                 id="date"
                 name="date"
-                required
-              />
+                required>
               <label class="form__lable" for="email"
                 >Tu Correo Electrónico</label
               >
@@ -156,8 +153,7 @@
                 id="email"
                 name="email"
                 placeholder="email@email.com"
-                requiered
-              />
+                requiered>
             </fieldset>
             <fieldset class="form__fieldset">
               <button class="form__button" type="submit">
@@ -170,8 +166,7 @@
                 type="checkbox"
                 id="checkbox"
                 name="checkbox"
-                required
-              />
+                required>
               <label
                 class="form__lable form__lable_direction_right"
                 for="checkbox"
