--- a/index.html
+++ b/index.html
@@ -119,13 +119,14 @@
           <form action="#" class="form reservation__form">
             <fieldset class="form__fieldset">
               <label class="form__label" for="name">Nombre</label>
-              <imput
+              <input
                 class="form__input"
                 type="text"
                 id="name"
                 name="name"
                 aria-placeholder="Nombre"
-                required>
+                required
+              />
               <label class="form__label" for="diners-numbers"
                 >Número de comensales</label
               >
@@ -136,14 +137,16 @@
                 min="1"
                 max="8"
                 placeholder="1-8"
-                required>
+                required
+              />
               <label class="form__lable" for="date">Fecha y Hora</label>
               <input
                 class="form__input"
                 type="datetime-local"
                 id="date"
                 name="date"
-                required>
+                required
+              />
               <label class="form__lable" for="email"
                 >Tu Correo Electrónico</label
               >
@@ -153,20 +156,18 @@
                 id="email"
                 name="email"
                 placeholder="email@email.com"
-                requiered>
-            </fieldset>
-            <fieldset class="form__fieldset">
+                required
+              />
               <button class="form__button" type="submit">
                 Reservar una mesa
               </button>
-            </fieldset>
-            <fieldset class="form__fieldset form__fieldset_el_center">
               <input
                 class="form__checkbox"
                 type="checkbox"
                 id="checkbox"
                 name="checkbox"
-                required>
+                required
+              />
               <label
                 class="form__lable form__lable_direction_right"
                 for="checkbox"
