--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               Sábados y Domingos (de 11:00h a 18:00h)
             </p>
           </div>
-          <div class="address">
+          <div class="header__address">
             <p class="header__paragraph">
               Avenida del Éxito 200, Ciudad Triple Peaks
             </p>
